--- a/TechnicalTestMVVM/TechnicalTestMVVM/Scene/ListOfCharacters/ListCell.xib
+++ b/TechnicalTestMVVM/TechnicalTestMVVM/Scene/ListOfCharacters/ListCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="DetailsCell" customModule="TechnicalTestMVVM" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ListCell" customModule="TechnicalTestMVVM" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -36,7 +36,7 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="nameCharacterList" destination="cUB-Ok-NdE" id="FTa-UJ-GMg"/>
+                <outlet property="nameCharacterList" destination="cUB-Ok-NdE" id="k1p-4B-hW6"/>
             </connections>
             <point key="canvasLocation" x="132" y="-11"/>
         </tableViewCell>
